[metadata]
name = swarm-tasks-rmvanarse
version = 0.0.1
url = https://github.com/rmvanarse/swarm_tasks
author = Rishikesh Vanarse
author_email = rishikesh.vanarse@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = Mobility algorithms for realworld tasks with decentralized swarms of 2D ground robots
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
